--- a/VolleyballScoreSheet/VolleyballScoreSheet.csproj
+++ b/VolleyballScoreSheet/VolleyballScoreSheet.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Prism.Core" Version="8.1.97" />
 		<PackageReference Include="Prism.Unity" Version="8.1.97" />
 		<PackageReference Include="ReactiveProperty" Version="8.0.3" />
+		<PackageReference Include="ReactiveProperty.WPF" Version="8.0.3" />
 		<PackageReference Include="WPF-UI" Version="1.2.1" />
 	</ItemGroup>
 	<!--<ItemGroup>
