--- a/VolleyballScoreSheet/VolleyballScoreSheet.csproj
+++ b/VolleyballScoreSheet/VolleyballScoreSheet.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Prism.Unity" Version="8.1.97" />
 		<PackageReference Include="ReactiveProperty" Version="8.2.0" />
 		<PackageReference Include="ReactiveProperty.WPF" Version="8.2.0" />
+		<PackageReference Include="WPF-UI" Version="2.0.3" />
 	</ItemGroup>
 	<!--<ItemGroup>
 	  <Compile Update="Views\RosterA.xaml.cs">
